--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -78,8 +78,8 @@
     "missingDependencies": "missing dependencies",
     "deposited": "Deposited",
     "withdrawDepositedLiquidity": "Withdraw deposited liquidity",
-    "depositedPglLiquidity": "Deposited PGL liquidity:",
-    "whenYouWithdrawWarning": "When you withdraw, your RUG is claimed and your Pangolin Liquidity tokens, PGL, are returned to you. You will no longer earn RUG rewards on this liquidity. Your original token liquidity will remain in its liquidity pool.",
+    "depositedRlpLiquidity": "Deposited RLP liquidity:",
+    "whenYouWithdrawWarning": "When you withdraw, your RUG is claimed and your RuGenerous Liquidity tokens, RLP, are returned to you. You will no longer earn RUG rewards on this liquidity. Your original token liquidity will remain in its liquidity pool.",
     "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your RUG is returned to you. You will no longer earn {{ symbol }} rewards on this RUG.",
     "withdrawAndClaim": "Withdraw & Claim",
     "withdrewStakingToken": "Withdrew {{ symbol }}!",
@@ -226,7 +226,7 @@
     "minutes": "minutes"
   },
   "vote": {
-    "earnedRug": "Earned RUG tokens represent voting shares in Pangolin governance.",
+    "earnedRug": "Earned RUG tokens represent voting shares in RuGenerous governance.",
     "canEitherVote": "You can either vote on each proposal yourself or delegate your votes to a third party.",
     "delegateVotes": "Delegate Votes",
     "selfDelegate": "Self Delegate",
@@ -300,20 +300,20 @@
     "youHave": "You have ",
     "pngAvailableClaim": " RUG available to claim",
     "loading": "Loading",
-    "welcomeToTeamPangolin": "Welcome to team Pangolin",
+    "welcomeToTeamRuGenerous": "Welcome to team RuGenerous",
     "claim": "Claim "
   },
   "earnPage": {
-    "pangolinLiquidityMining": "Pangolin liquidity mining",
-    "pangolinLiquidityStaking": "Pangolin RUG staking",
-    "depositPangolinLiquidity": "Deposit your Pangolin Liquidity Provider PGL tokens to receive RUG, the Pangolin protocol governance token.",
-    "depositPangolinStaking": "Deposit and stake your RUG tokens to earn more tokens.",
+    "rugenerousLiquidityMining": "RuGenerous liquidity mining",
+    "rugenerousLiquidityStaking": "RuGenerous RUG staking",
+    "depositRuGenerousLiquidity": "Deposit your RuGenerous Liquidity Provider RLP tokens to receive RUG, the RuGenerous protocol governance token.",
+    "depositRuGenerousStaking": "Deposit and stake your RUG tokens to earn more tokens.",
     "currentOpportunities": "Current opportunities",
     "readMoreAboutRug": "Read more about RUG",
     "getInsuranceCoverage": "Get Insurance Coverage",
     "getCoverNexusMutual": "Get cover on Nexus Mutual",
     "importantUpdate": "IMPORTANT UPDATE",
-    "pangolinGovernanceProposalResult": "As a result of Pangolin governance proposal 1, Pangolin is changing staking contracts! After approximately 08:59 UTC on 4/19, all staking rewards will be distributed to the new staking contracts. Before the switch, all rewards will still be distributed to the old contracts. To avoid interruptions to yield farming rewards, you need to unstake your liquidity from the old contracts and restake in the new contracts. You do not need to remove liquidity from your pools or alter your positions.",
+    "rugenerousGovernanceProposalResult": "As a result of RuGenerous governance proposal 1, RuGenerous is changing staking contracts! After approximately 08:59 UTC on 4/19, all staking rewards will be distributed to the new staking contracts. Before the switch, all rewards will still be distributed to the old contracts. To avoid interruptions to yield farming rewards, you need to unstake your liquidity from the old contracts and restake in the new contracts. You do not need to remove liquidity from your pools or alter your positions.",
     "oldRugPools": "Old RUG pools",
     "newRugPools": "New RUG pools",
     "participatingPools": "Participating pools",
@@ -323,8 +323,8 @@
     "pngStaking": "RUG Staking",
     "totalStaked": "Total Staked",
     "poolRate": "Pool Rate",
-    "step1": "Step 1. Get Pangolin Liquidity tokens (PGL)",
-    "pglTokenRequired": "PGL tokens are required. Once you've added liquidity to the {{ poolHandle }} pool you can stake your liquidity tokens on this page.",
+    "step1": "Step 1. Get RuGenerous Liquidity tokens (RLP)",
+    "pglTokenRequired": "RLP tokens are required. Once you've added liquidity to the {{ poolHandle }} pool you can stake your liquidity tokens on this page.",
     "addPoolLiquidity": "Add {{ poolHandle }} liquidity",
     "liquidityDeposits": "Your liquidity deposits",
     "yourStakedToken": "Your staked {{ symbol }}",
@@ -410,7 +410,7 @@
   },
   "buyPage": {
     "buyAvaxInfo": "Buy AVAX with fiat from our partner Wyre.",
-    "privacyInfo": "Pangolin does not store your purchase history or any personal data.",
+    "privacyInfo": "RuGenerous does not store your purchase history or any personal data.",
     "firstName": "First Name",
     "lastName": "Last Name",
     "email": "Email",
@@ -419,8 +419,8 @@
   "votePage": {
     "unlockVotes": "Unlock Votes",
     "updateDelegation": "Update Delegation",
-    "pangolinGovernance": "Pangolin Governance",
-    "earnedRugTokens": "RUG tokens represent voting shares in Pangolin governance. You can vote on each proposal yourself or delegate your votes to a third party.",
+    "rugenerousGovernance": "RuGenerous Governance",
+    "earnedRugTokens": "RUG tokens represent voting shares in RuGenerous governance. You can vote on each proposal yourself or delegate your votes to a third party.",
     "eligibleToVote": "To be eligible to vote, you must hold RUG in your wallet and delegate it at the start of voting. After voting has begun, you may pool or spend your RUG.",
     "governanceVotes": "Governance votes are decided by simple majority. There is no quorum threshold.",
     "proposals": "Proposals",
@@ -445,8 +445,8 @@
     "proposer": "Proposer"
   },
   "IDOPage": {
-    "pangolinIDOs": "Initial DEX Offering (IDO)",
-    "pangolinIDODescription": "Initial DEX Offerings (IDO) allows projects to crowdfund their native tokens on decentralized exchanges. We've partnered with amazing teams to bring great projects to the Avalanche community.",
+    "rugenerousIDOs": "Initial DEX Offering (IDO)",
+    "rugenerousIDODescription": "Initial DEX Offerings (IDO) allows projects to crowdfund their native tokens on decentralized exchanges. We've partnered with amazing teams to bring great projects to the Avalanche community.",
     "upcomingIDOs": "Upcoming",
     "endedIDOs": "Ended",
     "allIDOs": "All IDOs",
