--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -78,8 +78,8 @@
     "missingDependencies": "dépendances manquantes",
     "deposited": "Déposé",
     "withdrawDepositedLiquidity": "Retirer les liquidités déposées",
-    "depositedPglLiquidity": "Liquidité PGL déposée :",
-    "whenYouWithdrawWarning": "Lorsque vous effectuez un retrait, votre RUG est réclamé et vos jetons de liquidité Pangolin, PGL, vous sont rendus. Vous ne gagnerez plus de récompenses en RUG sur cette liquidité. Votre jeton de liquidité original restera dans sa pool de liquidité.",
+    "depositedRlpLiquidity": "Liquidité RLP déposée :",
+    "whenYouWithdrawWarning": "Lorsque vous effectuez un retrait, votre RUG est réclamé et vos jetons de liquidité RuGenerous, RLP, vous sont rendus. Vous ne gagnerez plus de récompenses en RUG sur cette liquidité. Votre jeton de liquidité original restera dans sa pool de liquidité.",
     "whenYouWithdrawSingleSideWarning": "Lorsque vous retirez, vos {{ symbol }} sont réclamés et vous récupérez vos RUG. Vous ne gagnerez plus de récompenses en  {{ symbol }} sur ces RUG.",
     "withdrawAndClaim": "Retirer & réclamer",
     "withdrewStakingToken": "{{ symbol }} Retiré!",
@@ -227,7 +227,7 @@
     "minutes": "minutes"
   },
   "vote": {
-    "earnedRug": "Les jetons RUG gagnés représentent des parts de vote dans la gouvernance de Pangolin.",
+    "earnedRug": "Les jetons RUG gagnés représentent des parts de vote dans la gouvernance de RuGenerous.",
     "canEitherVote": "Vous pouvez soit voter vous-même sur chaque proposition, soit déléguer vos votes à un tiers.",
     "delegateVotes": "Votes délégués",
     "selfDelegate": "Autodélégué",
@@ -301,20 +301,20 @@
     "youHave": "Vous avez ",
     "pngAvailableClaim": " RUG disponible à réclamer",
     "loading": "Chargement",
-    "welcomeToTeamPangolin": "Bienvenue dans l'équipe Pangolin",
+    "welcomeToTeamRuGenerous": "Bienvenue dans l'équipe RuGenerous",
     "claim": "Réclamer "
   },
   "earnPage": {
-    "pangolinLiquidityMining": "Minage de la liquidité de Pangolin",
-    "pangolinLiquidityStaking": "Pangolin RUG staking",
-    "depositPangolinLiquidity": "Déposez vos jetons PGL (Pangolin Liquidity Provider) pour recevoir RUG, le jeton de gouvernance du protocole Pangolin.",
-    "depositPangolinStaking": "Déposez vos RUG pour gagner plus de tokens parmi les opportunités présentées.",
+    "rugenerousLiquidityMining": "Minage de la liquidité de RuGenerous",
+    "rugenerousLiquidityStaking": "RuGenerous RUG staking",
+    "depositRuGenerousLiquidity": "Déposez vos jetons RLP (RuGenerous Liquidity Provider) pour recevoir RUG, le jeton de gouvernance du protocole RuGenerous.",
+    "depositRuGenerousStaking": "Déposez vos RUG pour gagner plus de tokens parmi les opportunités présentées.",
     "currentOpportunities": "Opportunités actuelles",
     "readMoreAboutRug": "En savoir plus sur RUG",
     "getInsuranceCoverage": "Obtenez une couverture d'assurance",
     "getCoverNexusMutual": "Obtenez une couverture sur Nexus Mutual",
     "importantUpdate": "IMPORTANTE MISE À JOUR",
-    "pangolinGovernanceProposalResult": "Suite à la proposition de gouvernance 1 de Pangolin, Pangolin change de contrat de staking ! Après environ 08:59 UTC le 19 avril, toutes les récompenses de staking seront distribuées aux nouveaux contrats de staking. Avant le changement, toutes les récompenses seront encore distribuées aux anciens contrats. Pour éviter toute interruption des récompenses du yield farming, vous devez retirer vos liquidités des anciens contrats et les remettre dans les nouveaux contrats. Vous n'avez pas besoin de retirer des liquidités de vos pools ou de modifier vos positions.",
+    "rugenerousGovernanceProposalResult": "Suite à la proposition de gouvernance 1 de RuGenerous, RuGenerous change de contrat de staking ! Après environ 08:59 UTC le 19 avril, toutes les récompenses de staking seront distribuées aux nouveaux contrats de staking. Avant le changement, toutes les récompenses seront encore distribuées aux anciens contrats. Pour éviter toute interruption des récompenses du yield farming, vous devez retirer vos liquidités des anciens contrats et les remettre dans les nouveaux contrats. Vous n'avez pas besoin de retirer des liquidités de vos pools ou de modifier vos positions.",
     "oldRugPools": "Anciennes Pools RUG",
     "newRugPools": "Nouvelles Pools RUG",
     "participatingPools": "Pools participantes",
@@ -324,8 +324,8 @@
     "pngStaking": "RUG Staking",
     "totalStaked": "Total Staké",
     "poolRate": "Taux de la pool",
-    "step1": "Etape 1. Obtenez des jetons de liquidité Pangolin (PGL)",
-    "pglTokenRequired": "Les jetons PGL sont nécessaires. Une fois que vous avez ajouté des liquidités à la {{ poolHandle }} pool vous pouvez stake vos jetons de liquidité sur cette page.",
+    "step1": "Etape 1. Obtenez des jetons de liquidité RuGenerous (RLP)",
+    "pglTokenRequired": "Les jetons RLP sont nécessaires. Une fois que vous avez ajouté des liquidités à la {{ poolHandle }} pool vous pouvez stake vos jetons de liquidité sur cette page.",
     "addPoolLiquidity": "Ajouter {{ poolHandle }} liquidité",
     "liquidityDeposits": "Vos dépôts de liquidités",
     "yourStakedToken": "Votre dépôt de {{ symbol }}",
@@ -411,7 +411,7 @@
   },
   "buyPage": {
     "buyAvaxInfo": "Achetez AVAX avec monnaie fiat chez notre partenaire Wyre.",
-    "privacyInfo": "Pangolin ne stocke pas votre historique d'achat ni aucune donnée personnelle.",
+    "privacyInfo": "RuGenerous ne stocke pas votre historique d'achat ni aucune donnée personnelle.",
     "firstName": "Prénom",
     "lastName": "Nom de Famille",
     "email": "Email",
@@ -420,8 +420,8 @@
   "votePage": {
     "unlockVotes": "Déverrouiller les votes",
     "updateDelegation": "Mise à jour de la délégation",
-    "pangolinGovernance": "Gouvernance de Pangolin",
-    "earnedRugTokens": "Les jetons RUG représentent des actions de vote dans la gouvernance de Pangolin. Vous pouvez voter vous-même sur chaque proposition ou déléguer vos votes à une tierce partie.",
+    "rugenerousGovernance": "Gouvernance de RuGenerous",
+    "earnedRugTokens": "Les jetons RUG représentent des actions de vote dans la gouvernance de RuGenerous. Vous pouvez voter vous-même sur chaque proposition ou déléguer vos votes à une tierce partie.",
     "eligibleToVote": "Pour pouvoir voter, vous devez détenir des RUG dans votre portefeuille et les déléguer au début du vote. Après le début du vote, vous pouvez mettre en commun ou dépenser vos RUG.",
     "governanceVotes": "Les votes de gouvernance sont décidés à la majorité simple. Il n'y a pas de seuil de quorum.",
     "proposals": "Propositions",
@@ -446,8 +446,8 @@
     "proposer": "Auteur"
   },
   "IDOPage": {
-    "pangolinIDOs": "Initial DEX Offering (IDO)",
-    "pangolinIDODescription": "Les offres DEX initiales (IDO) permettent aux projets de financer participatif leurs jetons natifs sur des échanges décentralisés. Nous nous sommes associés à des équipes incroyables pour apporter de grands projets à la communauté Avalanche.",
+    "rugenerousIDOs": "Initial DEX Offering (IDO)",
+    "rugenerousIDODescription": "Les offres DEX initiales (IDO) permettent aux projets de financer participatif leurs jetons natifs sur des échanges décentralisés. Nous nous sommes associés à des équipes incroyables pour apporter de grands projets à la communauté Avalanche.",
     "upcomingIDOs": "A venir",
     "endedIDOs": "Terminé",
     "allIDOs": "Tous les IDO",
