--- a/public/locales/tr.json
+++ b/public/locales/tr.json
@@ -78,8 +78,8 @@
     "missingDependencies": "eksik bağlılıklar",
     "deposited": "Yatırıldı",
     "withdrawDepositedLiquidity": "Yatırılan likiditeyi çek",
-    "depositedPglLiquidity": "Yatırılan PGL likiditesi:",
-    "whenYouWithdrawWarning": "Sağladığınız likiditeyi çektiğinizde RUG'nizi talep edersiniz ve Pangolin likidite tokenleriniz (PGL) size iade edilir. Bu likidite üzerinden artık RUG ödülleri kazanmayacaksınız. Orijinal token likiditeniz, likidite havuzunda kalacaktır.",
+    "depositedRlpLiquidity": "Yatırılan RLP likiditesi:",
+    "whenYouWithdrawWarning": "Sağladığınız likiditeyi çektiğinizde RUG'nizi talep edersiniz ve RuGenerous likidite tokenleriniz (RLP) size iade edilir. Bu likidite üzerinden artık RUG ödülleri kazanmayacaksınız. Orijinal token likiditeniz, likidite havuzunda kalacaktır.",
     "whenYouWithdrawSingleSideWarning": "Çekim işlemi yaptığınızda {{ symbol }} talep edilir ve RUG tokenleriniz size iade edilir. Bu RUG staking'i üzerinden artık {{ symbol }} ödülü kazanamayacaksınız.",
     "withdrawAndClaim": "Çek & Ödülü Talep Et",
     "withdrewStakingToken": "{{ symbol }} çekildi!",
@@ -227,7 +227,7 @@
     "minutes": "dakika"
   },
   "vote": {
-    "earnedRug": "Kazanılan RUG tokenleri, Pangolin'in yönetimindeki oy hakkını temsil eder.",
+    "earnedRug": "Kazanılan RUG tokenleri, RuGenerous'in yönetimindeki oy hakkını temsil eder.",
     "canEitherVote": "Her önergeye kendiniz oy verebilir veya oylarınızı üçüncü bir partiye devredebilirsiniz.",
     "delegateVotes": "Oylarınızın Yetkisini Başkasına Verin",
     "selfDelegate": "Kendinizi Temsil Edin",
@@ -301,20 +301,20 @@
     "youHave": "Talep edebileceğiniz mevcut RUG: ",
     "pngAvailableClaim": "",
     "loading": "Yükleniyor",
-    "welcomeToTeamPangolin": "Pangolin ekibine hoşgeldiniz",
+    "welcomeToTeamRuGenerous": "RuGenerous ekibine hoşgeldiniz",
     "claim": "Talep Et"
   },
   "earnPage": {
-    "pangolinLiquidityMining": "Pangolin likidite madenciliği",
-    "pangolinLiquidityStaking": "Pangolin RUG staking",
-    "depositPangolinLiquidity": "Pangolin protokolünün yönetim tokeni olan RUG'yi elde etmek için Pangolin Likidite Sağlayıcı(PGL) tokenlerinizi yatırın.",
-    "depositPangolinStaking": "Ödül kazanmak için RUG tokenlerinizi yatırın ve stake edin.",
+    "rugenerousLiquidityMining": "RuGenerous likidite madenciliği",
+    "rugenerousLiquidityStaking": "RuGenerous RUG staking",
+    "depositRuGenerousLiquidity": "RuGenerous protokolünün yönetim tokeni olan RUG'yi elde etmek için RuGenerous Likidite Sağlayıcı(RLP) tokenlerinizi yatırın.",
+    "depositRuGenerousStaking": "Ödül kazanmak için RUG tokenlerinizi yatırın ve stake edin.",
     "currentOpportunities": "Mevcut Fırsatlar",
     "readMoreAboutRug": "RUG hakkında daha fazla bilgi edinin",
     "getInsuranceCoverage": "Sigorta Kapsamı Alın",
     "getCoverNexusMutual": "Nexus Mutual'da siper alın",
     "importantUpdate": "ÖNEMLİ GÜNCELLEME",
-    "pangolinGovernanceProposalResult": "Pangolin yönetiminin 1. önergesinin oylama sonucuna göre: Pangolin, yatırma işlemlerinde kullanılan sözleşmelerini değiştirmiştir. 19/04/2021 tarihinde saat 08:59’dan sonra (UTC saat dilimi), likidite sağlama karşılığında verilen tüm ödüller, yeni sözleşmelerine dağıtılacaktır. Geçişten önce ise, tüm ödüller eski sözleşmelere dağıtılmaya devam edecektir. Yield farming ödüllerinin kesintiye uğramasını önlemek adına likiditenizi eski sözleşmelerden kaldırmanız ve yeni sözleşmelere geçiş sağlamanız gerekmektedir. Bununla birlikte havuzlardaki likiditenizi çekmenize veya pozisyonlarınızı değiştirmenize gerek yoktur.",
+    "rugenerousGovernanceProposalResult": "RuGenerous yönetiminin 1. önergesinin oylama sonucuna göre: RuGenerous, yatırma işlemlerinde kullanılan sözleşmelerini değiştirmiştir. 19/04/2021 tarihinde saat 08:59’dan sonra (UTC saat dilimi), likidite sağlama karşılığında verilen tüm ödüller, yeni sözleşmelerine dağıtılacaktır. Geçişten önce ise, tüm ödüller eski sözleşmelere dağıtılmaya devam edecektir. Yield farming ödüllerinin kesintiye uğramasını önlemek adına likiditenizi eski sözleşmelerden kaldırmanız ve yeni sözleşmelere geçiş sağlamanız gerekmektedir. Bununla birlikte havuzlardaki likiditenizi çekmenize veya pozisyonlarınızı değiştirmenize gerek yoktur.",
     "oldRugPools": "Eski RUG havuzları",
     "newRugPools": "Yeni RUG havuzları",
     "participatingPools": "Katılım olan havuzlar",
@@ -324,8 +324,8 @@
     "pngStaking": "RUG Staking",
     "totalStaked": "Yatırılan Toplam",
     "poolRate": "Havuzun Getirisi",
-    "step1": "1. Aşama: Pangolin likidite tokenleri (PGL) edinin",
-    "pglTokenRequired": "PGL tokeni gereklidir. {{ poolHandle }} havuzuna likidite ekledikten sonra bu sayfadan likidite tokenlerinizi yatırabilirsiniz.",
+    "step1": "1. Aşama: RuGenerous likidite tokenleri (RLP) edinin",
+    "pglTokenRequired": "RLP tokeni gereklidir. {{ poolHandle }} havuzuna likidite ekledikten sonra bu sayfadan likidite tokenlerinizi yatırabilirsiniz.",
     "addPoolLiquidity": "{{ poolHandle }} havuzuna likidite ekle",
     "liquidityDeposits": "Likidite yatırımlarınız",
     "yourStakedToken": "Stake edilmiş {{ symbol }} tokenleriniz",
@@ -411,7 +411,7 @@
   },
   "buyPage": {
     "buyAvaxInfo": "Ortağımız Wyre aracılığıyla AVAX satın alın.",
-    "privacyInfo": "Pangolin, satın alma geçmişinizi ya da şahsi bilgilerinizi depolamaz.",
+    "privacyInfo": "RuGenerous, satın alma geçmişinizi ya da şahsi bilgilerinizi depolamaz.",
     "firstName": "Ad",
     "lastName": "Soyad",
     "email": "E-mail",
@@ -420,8 +420,8 @@
   "votePage": {
     "unlockVotes": "Oyların Kilidini Kaldır",
     "updateDelegation": "Delegasyonu(Yetkilerdirme) Güncelle",
-    "pangolinGovernance": "Pangolin Yönetimi",
-    "earnedRugTokens": "RUG tokenleri, Pangolin'in yönetiminde kullanabildiğiniz oy hakkını temsil eder. Her önergede kendiniz oy verebilir veya oy haklarınızı üçüncü bir partiye devredebilirsiniz.",
+    "rugenerousGovernance": "RuGenerous Yönetimi",
+    "earnedRugTokens": "RUG tokenleri, RuGenerous'in yönetiminde kullanabildiğiniz oy hakkını temsil eder. Her önergede kendiniz oy verebilir veya oy haklarınızı üçüncü bir partiye devredebilirsiniz.",
     "eligibleToVote": "Oy kullanmaya uygun olmak için cüzdanınızda RUG tutmanız ve oylama başında RUG'lerinizi yetkilendirmeniz gerekir. Oylama başladıktan sonra RUG'lerinizi bir havuza aktarabilir veya harcayabilirsiniz.",
     "governanceVotes": "Yönetimin sunduğu önergeler, basit çoğunlukla kararlaştırılır. Ulaşılması veya geçilmesi gereken bir çoğunluk eşiği yoktur.",
     "proposals": "Önergeler",
@@ -446,8 +446,8 @@
     "proposer": "Teklif eden"
   },
   "IDOPage": {
-    "pangolinIDOs": "Initial DEX Offering (IDO)",
-    "pangolinIDODescription": "İlk DEX Teklifleri (IDO), projelerin yerel tokenlerini merkezi olmayan borsalarda kitle fonlamasına olanak tanır. Avalanche topluluğuna harika projeler getirmek için harika ekiplerle ortaklık kurduk.",
+    "rugenerousIDOs": "Initial DEX Offering (IDO)",
+    "rugenerousIDODescription": "İlk DEX Teklifleri (IDO), projelerin yerel tokenlerini merkezi olmayan borsalarda kitle fonlamasına olanak tanır. Avalanche topluluğuna harika projeler getirmek için harika ekiplerle ortaklık kurduk.",
     "upcomingIDOs": "Yaklaşan",
     "endedIDOs": "Bitti",
     "allIDOs": "Tüm IDO'lar",
