--- a/public/locales/vn.json
+++ b/public/locales/vn.json
@@ -78,8 +78,8 @@
     "missingDependencies": "Mất phụ thuộc",
     "deposited": "Đã gửi",
     "withdrawDepositedLiquidity": "Rút thanh khoản đã gửi",
-    "depositedPglLiquidity": "Thanh khoản PGL đã gửi:",
-    "whenYouWithdrawWarning": "Khi bạn rút tiền, số phần thưởng RUG được nhận và mã thông báo Pangolin Liquidity của bạn, PGL, được trả lại cho bạn. Bạn sẽ không được thưởng thêm RUG trên mã thanh khoản này nữa. Số token thanh khoản ban đầu vẫn còn lại trong bể",
+    "depositedRlpLiquidity": "Thanh khoản RLP đã gửi:",
+    "whenYouWithdrawWarning": "Khi bạn rút tiền, số phần thưởng RUG được nhận và mã thông báo RuGenerous Liquidity của bạn, RLP, được trả lại cho bạn. Bạn sẽ không được thưởng thêm RUG trên mã thanh khoản này nữa. Số token thanh khoản ban đầu vẫn còn lại trong bể",
     "whenYouWithdrawSingleSideWarning": "Khi bạn rút tiền, {{symbol}} của bạn sẽ được nhận và RUG của bạn sẽ được trả lại. Bạn sẽ không còn kiếm được phần thưởng {{Symbol}} trên token RUG này nữa.",
     "withdrawAndClaim": "Rút và nhận",
     "withdrewStakingToken": "Đã rút!{{ symbol }}",
@@ -227,7 +227,7 @@
     "minutes": "phút"
   },
   "vote": {
-    "earnedRug": "Mã token RUG kiếm được đại diện cho cổ phần biểu quyết trong quản trị Pangolin.",
+    "earnedRug": "Mã token RUG kiếm được đại diện cho cổ phần biểu quyết trong quản trị RuGenerous.",
     "canEitherVote": "Bạn có thể tự bỏ phiếu cho từng đề xuất hoặc ủy thác phiếu bầu của mình cho bên thứ ba. ",
     "delegateVotes": "Phiếu bầu ủy quyền",
     "selfDelegate": "Tự ủy quyền",
@@ -301,20 +301,20 @@
     "youHave": "Bạn có ",
     "pngAvailableClaim": " RUG khả dụng để nhận",
     "loading": "Đang tải",
-    "welcomeToTeamPangolin": "Chào mừng đến đội Pagonlin",
+    "welcomeToTeamRuGenerous": "Chào mừng đến đội Pagonlin",
     "claim": "Nhận "
   },
   "earnPage": {
-    "pangolinLiquidityMining": "Khai thác thanh khoản Pangolin",
-    "pangolinLiquidityStaking": "Đặt cổ phần Pangolin RUG ",
-    "depositPangolinLiquidity": "Gửi mã token PGL của vị thế cung cấp thanh khoản Pangolin của bạn để nhận RUG, mã thông báo quản trị giao thức Pangolin.",
-    "depositPangolinStaking": "Gửi và đặt cổ phần mã token RUG của bạn để nhận được nhiều token hơn.",
+    "rugenerousLiquidityMining": "Khai thác thanh khoản RuGenerous",
+    "rugenerousLiquidityStaking": "Đặt cổ phần RuGenerous RUG ",
+    "depositRuGenerousLiquidity": "Gửi mã token RLP của vị thế cung cấp thanh khoản RuGenerous của bạn để nhận RUG, mã thông báo quản trị giao thức RuGenerous.",
+    "depositRuGenerousStaking": "Gửi và đặt cổ phần mã token RUG của bạn để nhận được nhiều token hơn.",
     "currentOpportunities": "Cơ hội hiện tại",
     "readMoreAboutRug": "Tìm hiểu nhiều hơn về RUG",
     "getInsuranceCoverage": "Nhận bảo hiểm",
     "getCoverNexusMutual": "Nhận trang bìa trên Nexus Mutual",
     "importantUpdate": "CẬP NHẬT QUAN TRỌNG",
-    "pangolinGovernanceProposalResult": "Theo kết quả của đề xuất quản trị Pangolin 1, Pangolin đang thay đổi các hợp đồng đặt cổ phần! Sau khoảng 08:59 UTC vào ngày 19 tháng 4, tất cả phần thưởng đặt cổ phần sẽ được phân phối cho các hợp đồng đặt cổ phần mới. Trước khi chuyển đổi, tất cả phần thưởng sẽ vẫn được phân phối cho các hợp đồng cũ. Để tránh bị gián đoạn việc kiếm phần thưởng farming, bạn cần loại bỏ thanh khoản của mình khỏi các hợp đồng cũ và thực hiện lại các hợp đồng mới. Bạn không cần phải xóa thanh khoản khỏi bể của mình hoặc thay đổi vị thế của mình. ",
+    "rugenerousGovernanceProposalResult": "Theo kết quả của đề xuất quản trị RuGenerous 1, RuGenerous đang thay đổi các hợp đồng đặt cổ phần! Sau khoảng 08:59 UTC vào ngày 19 tháng 4, tất cả phần thưởng đặt cổ phần sẽ được phân phối cho các hợp đồng đặt cổ phần mới. Trước khi chuyển đổi, tất cả phần thưởng sẽ vẫn được phân phối cho các hợp đồng cũ. Để tránh bị gián đoạn việc kiếm phần thưởng farming, bạn cần loại bỏ thanh khoản của mình khỏi các hợp đồng cũ và thực hiện lại các hợp đồng mới. Bạn không cần phải xóa thanh khoản khỏi bể của mình hoặc thay đổi vị thế của mình. ",
     "oldRugPools": "Những bể RUG cũ",
     "newRugPools": "Những bể RUG mới",
     "participatingPools": "Đang tham gia vào các bể",
@@ -324,8 +324,8 @@
     "pngStaking": "Đang đặt cổ phần RUG",
     "totalStaked": "Tổng số cổ phần đã đặt",
     "poolRate": "Tỷ suất bể",
-    "step1": "Bước 1. Nhận token thanh khoản Pangolin (PGL)",
-    "pglTokenRequired": "Mã token PGL là bắt buộc. Khi bạn thêm thanh khoản vào {{ poolHandle }} bể bạn có thể đặt cổ phần mã token thanh khoản của mình trên trang này.",
+    "step1": "Bước 1. Nhận token thanh khoản RuGenerous (RLP)",
+    "pglTokenRequired": "Mã token RLP là bắt buộc. Khi bạn thêm thanh khoản vào {{ poolHandle }} bể bạn có thể đặt cổ phần mã token thanh khoản của mình trên trang này.",
     "addPoolLiquidity": "Thêm {{ poolHandle }} thanh khoản",
     "liquidityDeposits": "Số tiền thanh khoản của bạn",
     "yourStakedToken": "Số cổ phần {{ symbol }} đã đặt của bạn",
@@ -411,7 +411,7 @@
   },
   "buyPage": {
     "buyAvaxInfo": "Mua AVAX bằng fiat từ đối tác Wyre của chúng tôi.",
-    "privacyInfo": "Pangolin không lưu trữ lịch sử mua hàng của bạn hoặc bất kỳ dữ liệu cá nhân nào.",
+    "privacyInfo": "RuGenerous không lưu trữ lịch sử mua hàng của bạn hoặc bất kỳ dữ liệu cá nhân nào.",
     "firstName": "Tên đầu",
     "lastName": "Tên cuối",
     "email": "Thư điện tử",
@@ -420,8 +420,8 @@
   "votePage": {
     "unlockVotes": "Mở khóa phiếu bầu",
     "updateDelegation": "Cập nhật ủy quyền",
-    "pangolinGovernance": "Quản trị Pangolin",
-    "earnedRugTokens": "Các mã token RUG đại diện cho cổ phần có quyền biểu quyết trong quản trị Pangolin. Bạn có thể tự bỏ phiếu cho từng đề xuất hoặc ủy thác phiếu bầu của mình cho bên thứ ba.",
+    "rugenerousGovernance": "Quản trị RuGenerous",
+    "earnedRugTokens": "Các mã token RUG đại diện cho cổ phần có quyền biểu quyết trong quản trị RuGenerous. Bạn có thể tự bỏ phiếu cho từng đề xuất hoặc ủy thác phiếu bầu của mình cho bên thứ ba.",
     "eligibleToVote": "Để đủ điều kiện bỏ phiếu, bạn phải giữ RUG trong ví của mình và ủy quyền khi bắt đầu bỏ phiếu. Sau khi bắt đầu bỏ phiếu, bạn có thể gộp hoặc sử dụng RUG của mình.",
     "governanceVotes": "Các phiếu bầu quản trị được quyết định theo đa số. Không có ngưỡng đại biểu. ",
     "proposals": "Đề xuất",
@@ -446,8 +446,8 @@
     "proposer": "Người đề xuất"
   },
   "IDOPage": {
-    "pangolinIDOs": "Initial DEX Offering (IDO)",
-    "pangolinIDODescription": "Initial DEX Offerings (IDO) cho phép các dự án huy động vốn từ các mã token bản vị của họ trên các sàn giao dịch phi tập trung. Chúng tôi đã hợp tác với các nhóm tuyệt vời để mang lại những dự án tuyệt vời cho cộng đồng Avalanche. ",
+    "rugenerousIDOs": "Initial DEX Offering (IDO)",
+    "rugenerousIDODescription": "Initial DEX Offerings (IDO) cho phép các dự án huy động vốn từ các mã token bản vị của họ trên các sàn giao dịch phi tập trung. Chúng tôi đã hợp tác với các nhóm tuyệt vời để mang lại những dự án tuyệt vời cho cộng đồng Avalanche. ",
     "upcomingIDOs": "Sắp tới",
     "endedIDOs": "Kết thúc",
     "allIDOs": "Tất cả IDO",
