--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -78,8 +78,8 @@
     "missingDependencies": "缺少依赖项",
     "deposited": "存入",
     "withdrawDepositedLiquidity": "提取存入的流动性",
-    "depositedPglLiquidity": "存入 PGL 流动性:",
-    "whenYouWithdrawWarning": "当您退出时，您的 RUG 将被认领，您的Pangolin流动性代币 PGL 将退还给您。您将不再透过此流动性获得 RUG 奖励。您的流动性代币将在保持流动状态。",
+    "depositedRlpLiquidity": "存入 RLP 流动性:",
+    "whenYouWithdrawWarning": "当您退出时，您的 RUG 将被认领，您的RuGenerous流动性代币 RLP 将退还给您。您将不再透过此流动性获得 RUG 奖励。您的流动性代币将在保持流动状态。",
     "whenYouWithdrawSingleSideWarning": "当您取出资产时，您的 {{ symbol }}将被认领且您的 RUG 将会退还，您将不会再赚取此 RUG 池 {{ symbol }} 的奖励",
     "withdrawAndClaim": "提取 & 收成",
     "withdrewStakingToken": "提取 {{ symbol }}!",
@@ -227,7 +227,7 @@
     "minutes": "分钟"
   },
   "vote": {
-    "earnedRug": "获得的 RUG 代币代表 Pangolin 治理中的投票份额。",
+    "earnedRug": "获得的 RUG 代币代表 RuGenerous 治理中的投票份额。",
     "canEitherVote": "您可以自己对每个提案进行投票，也可以将您的投票委托给第三方。",
     "delegateVotes": "委托投票",
     "selfDelegate": "自我委托",
@@ -301,20 +301,20 @@
     "youHave": "你有 ",
     "pngAvailableClaim": " RUG 可以领取",
     "loading": "Loading",
-    "welcomeToTeamPangolin": "欢迎加入 Pangolin 团队",
+    "welcomeToTeamRuGenerous": "欢迎加入 RuGenerous 团队",
     "claim": "领取 "
   },
   "earnPage": {
-    "pangolinLiquidityMining": "Pangolin 流动性挖矿",
-    "pangolinLiquidityStaking": "Pangolin RUG 质押",
-    "depositPangolinLiquidity": "存入您的 Pangolin LP 代币PGL 以接收 Pangolin 协议治理代币 RUG。",
-    "depositPangolinStaking": "存取并质押你的 RUG 以赚取更多其他代币",
+    "rugenerousLiquidityMining": "RuGenerous 流动性挖矿",
+    "rugenerousLiquidityStaking": "RuGenerous RUG 质押",
+    "depositRuGenerousLiquidity": "存入您的 RuGenerous LP 代币RLP 以接收 RuGenerous 协议治理代币 RUG。",
+    "depositRuGenerousStaking": "存取并质押你的 RUG 以赚取更多其他代币",
     "currentOpportunities": "启用的农场",
     "readMoreAboutRug": "阅读有关 RUG 的更多信息",
     "getInsuranceCoverage": "获得保险",
     "getCoverNexusMutual": "获得 Nexus Mutual 的保障",
     "importantUpdate": "重要更新",
-    "pangolinGovernanceProposalResult": "由于 Pangolin 治理提案1，穿山甲正在改变Staking合约！ 在 4/19 UTC 大约 08:59 之后，所有 Staking 奖励将分配给新的 Staking 合约。 切换前，所有奖励仍将分配给旧合约。 为避免产生农业奖励的中断，您需要从旧合约中取消您的流动性并在新合约中重新投入。 您不需要从您的池中移除流动性或改变您的部位。",
+    "rugenerousGovernanceProposalResult": "由于 RuGenerous 治理提案1，穿山甲正在改变Staking合约！ 在 4/19 UTC 大约 08:59 之后，所有 Staking 奖励将分配给新的 Staking 合约。 切换前，所有奖励仍将分配给旧合约。 为避免产生农业奖励的中断，您需要从旧合约中取消您的流动性并在新合约中重新投入。 您不需要从您的池中移除流动性或改变您的部位。",
     "oldRugPools": "旧的 RUG 矿池",
     "newRugPools": "新 RUG 矿池",
     "participatingPools": "参与矿池",
@@ -324,8 +324,8 @@
     "pngStaking": "RUG 质押",
     "totalStaked": "总质押",
     "poolRate": "池率",
-    "step1": "S 获取 Pangolin 流动性代币 (PGL)",
-    "pglTokenRequired": "需要PGL代币。 向 {{ poolHandle }} 池添加流动性后，您可以在此页面上抵押您的流动性代币。",
+    "step1": "S 获取 RuGenerous 流动性代币 (RLP)",
+    "pglTokenRequired": "需要RLP代币。 向 {{ poolHandle }} 池添加流动性后，您可以在此页面上抵押您的流动性代币。",
     "addPoolLiquidity": "添加 {{ poolHandle }} 流动性",
     "liquidityDeposits": "您的流动资金存款",
     "yourStakedToken": "你质押了 {{ symbol }}",
@@ -411,7 +411,7 @@
   },
   "buyPage": {
     "buyAvaxInfo": "用我们的合作伙伴怀尔的法定资金购买 AVAX。",
-    "privacyInfo": "Pangolin 不存储您的购买历史记录或任何个人数据。",
+    "privacyInfo": "RuGenerous 不存储您的购买历史记录或任何个人数据。",
     "firstName": "名",
     "lastName": "姓",
     "email": "邮箱",
@@ -420,8 +420,8 @@
   "votePage": {
     "unlockVotes": "解锁投票",
     "updateDelegation": "更新委托",
-    "pangolinGovernance": "Pangolin治理",
-    "earnedRugTokens": "RUG 代币代表Pangolin治理中的投票份额。 您可以自己对每个提案进行投票，也可以将您的投票委托给第三方。",
+    "rugenerousGovernance": "RuGenerous治理",
+    "earnedRugTokens": "RUG 代币代表RuGenerous治理中的投票份额。 您可以自己对每个提案进行投票，也可以将您的投票委托给第三方。",
     "eligibleToVote": "要获得投票资格，您必须在钱包中持有 RUG 并在投票开始时委托它。投票开始后，您可以汇集或花费您的 RUG。",
     "governanceVotes": "治理投票由简单多数决定。没有法定人数阈值。",
     "proposals": "提案",
@@ -446,8 +446,8 @@
     "proposer": "建议"
   },
   "IDOPage": {
-    "pangolinIDOs": "Initial DEX Offering (IDO)",
-    "pangolinIDODescription": "初始 DEX 产品 (IDO) 允许项目在去中心化交易所上众筹其原生代币。 我们与出色的团队合作，为 Avalanche 社区带来了伟大的项目.",
+    "rugenerousIDOs": "Initial DEX Offering (IDO)",
+    "rugenerousIDODescription": "初始 DEX 产品 (IDO) 允许项目在去中心化交易所上众筹其原生代币。 我们与出色的团队合作，为 Avalanche 社区带来了伟大的项目.",
     "upcomingIDOs": "即将到来",
     "endedIDOs": "结束",
     "allIDOs": "所有 IDO",
