--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -78,8 +78,8 @@
     "missingDependencies": "Fehlende Abhängigkeiten",
     "deposited": "Eingezahlt",
     "withdrawDepositedLiquidity": "Eingezahlte Liquidität abbuchen",
-    "depositedPglLiquidity": "Eingezahlte PGL-Liquidität:",
-    "whenYouWithdrawWarning": "Wenn du abbuchst, wird deine ausstehenden RUG-Vergütung beansprucht. Deine Pangolin-Liquiditätstoken, PGL, werden an dich zurückgegeben und du wirst keine RUG-Vergütungen mehr auf diese Liquiditätsposition erhalten. Deine ursprüngliche Liquidität wird im Liquiditätspool verbleiben.",
+    "depositedRlpLiquidity": "Eingezahlte RLP-Liquidität:",
+    "whenYouWithdrawWarning": "Wenn du abbuchst, wird deine ausstehenden RUG-Vergütung beansprucht. Deine RuGenerous-Liquiditätstoken, RLP, werden an dich zurückgegeben und du wirst keine RUG-Vergütungen mehr auf diese Liquiditätsposition erhalten. Deine ursprüngliche Liquidität wird im Liquiditätspool verbleiben.",
     "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your RUG is returned to you. You will no longer earn {{ symbol }} rewards on this RUG.",
     "withdrawAndClaim": "Abbuchen & Beanspruchen",
     "withdrewStakingToken": "{{ symbol }} abgebucht!",
@@ -227,7 +227,7 @@
     "minutes": "Minuten"
   },
   "vote": {
-    "earnedRug": "Verdiente RUG-Token stellen stimmberechtigte Anteile bei Pangolin-Abstimmungen dar.",
+    "earnedRug": "Verdiente RUG-Token stellen stimmberechtigte Anteile bei RuGenerous-Abstimmungen dar.",
     "canEitherVote": "Du kannst entweder über jeden Antrag selbst abstimmen oder deine Stimmen an einen Dritten delegieren.",
     "delegateVotes": "Stimmen delegieren",
     "selfDelegate": "An dich selbst delegieren",
@@ -301,20 +301,20 @@
     "youHave": "Du hast ",
     "pngAvailableClaim": " RUG verfügbar zum Beanspruchen",
     "loading": "Lädt",
-    "welcomeToTeamPangolin": "Willkommen im Pangolin-Team",
+    "welcomeToTeamRuGenerous": "Willkommen im RuGenerous-Team",
     "claim": "Beanspruchen "
   },
   "earnPage": {
-    "pangolinLiquidityMining": "Pangolin Liquidity-Mining",
-    "pangolinLiquidityStaking": "Pangolin RUG staking",
-    "depositPangolinLiquidity": "Zahle deine Pangolin Liquiditätsprovider-Token (PGL) ein, um RUG, den Governance-Token des Pangolin-Protokolls zu erhalten.",
-    "depositPangolinStaking": "Deposit and stake your RUG tokens to earn more tokens.",
+    "rugenerousLiquidityMining": "RuGenerous Liquidity-Mining",
+    "rugenerousLiquidityStaking": "RuGenerous RUG staking",
+    "depositRuGenerousLiquidity": "Zahle deine RuGenerous Liquiditätsprovider-Token (RLP) ein, um RUG, den Governance-Token des RuGenerous-Protokolls zu erhalten.",
+    "depositRuGenerousStaking": "Deposit and stake your RUG tokens to earn more tokens.",
     "currentOpportunities": "Current opportunities",
     "readMoreAboutRug": "Erfahre mehr über RUG",
     "getInsuranceCoverage": "Versicherungsschutz abschließen",
     "getCoverNexusMutual": "Schützen Sie sich bei Nexus Mutual",
     "importantUpdate": "WICHTIGES UPDATE",
-    "pangolinGovernanceProposalResult": "Als Ergebnis des Pangolin-Governance-Antrags 1 ändert Pangolin die Staking-Smart Contracts! Nach ca. 09:59 MEZ am 19.4. werden alle Staking-Vergütungen auf die neuen Staking-Smart Contracts verteilt. Vor der Umstellung werden alle Vergütungen noch auf die alten Verträge verteilt. Um Unterbrechungen bei den Yield Farming-Vergütungen zu vermeiden, musst du deine Liquidität aus den alten Smart Contracts herausnehmen und in den neuen Smart Contracts staken. Du musst weder Liquidität aus deinen Pools entfernen noch deine Positionen ändern.",
+    "rugenerousGovernanceProposalResult": "Als Ergebnis des RuGenerous-Governance-Antrags 1 ändert RuGenerous die Staking-Smart Contracts! Nach ca. 09:59 MEZ am 19.4. werden alle Staking-Vergütungen auf die neuen Staking-Smart Contracts verteilt. Vor der Umstellung werden alle Vergütungen noch auf die alten Verträge verteilt. Um Unterbrechungen bei den Yield Farming-Vergütungen zu vermeiden, musst du deine Liquidität aus den alten Smart Contracts herausnehmen und in den neuen Smart Contracts staken. Du musst weder Liquidität aus deinen Pools entfernen noch deine Positionen ändern.",
     "oldRugPools": "Alte RUG-Pools",
     "newRugPools": "Neue RUG-Pools",
     "participatingPools": "Pools, an denen du beteiligt bist",
@@ -324,8 +324,8 @@
     "pngStaking": "RUG Staking",
     "totalStaked": "Insgesamt gestakt",
     "poolRate": "Pool-Rate",
-    "step1": "Schritt 1. Hole dir Pangolin Liquidity-Token (PGL)",
-    "pglTokenRequired": "Es sind PGL-Token erforderlich. Sobald du Liquidität zu dem {{ poolHandle }} Pool hinzugefügt hast, kannst du deine Liquiditätsprovider-Token auf dieser Seite staken.",
+    "step1": "Schritt 1. Hole dir RuGenerous Liquidity-Token (RLP)",
+    "pglTokenRequired": "Es sind RLP-Token erforderlich. Sobald du Liquidität zu dem {{ poolHandle }} Pool hinzugefügt hast, kannst du deine Liquiditätsprovider-Token auf dieser Seite staken.",
     "addPoolLiquidity": "Füge {{ poolHandle }} Liquidität hinzu",
     "liquidityDeposits": "Deine Liquiditätseinzahlungen",
     "yourStakedToken": "Your staked {{ symbol }}",
@@ -411,7 +411,7 @@
   },
   "buyPage": {
     "buyAvaxInfo": "Kaufen Sie AVAX mit Fiatgeld von unserem Partner Wyre.",
-    "privacyInfo": "Pangolin speichert keine Kaufhistorie und persönliche Daten.",
+    "privacyInfo": "RuGenerous speichert keine Kaufhistorie und persönliche Daten.",
     "firstName": "Vorname",
     "lastName": "Nachname",
     "email": "E-Mail-Adresse",
@@ -420,8 +420,8 @@
   "votePage": {
     "unlockVotes": "Stimmen freischalten",
     "updateDelegation": "Delegierung aktualisieren",
-    "pangolinGovernance": "Pangolin-Governance",
-    "earnedRugTokens": "RUG-Token repräsentieren Stimmgewichte in der Pangolin Governance. Du kannst entweder über jeden Vorschlag selbst abstimmen oder deine Stimmen an einen Dritten delegieren.",
+    "rugenerousGovernance": "RuGenerous-Governance",
+    "earnedRugTokens": "RUG-Token repräsentieren Stimmgewichte in der RuGenerous Governance. Du kannst entweder über jeden Vorschlag selbst abstimmen oder deine Stimmen an einen Dritten delegieren.",
     "eligibleToVote": "Um stimmberechtigt zu sein, musst du RUG in deiner Wallet haben und diese zu Beginn der Abstimmung delegieren. Nachdem die Abstimmung begonnen hat, kannst du deine RUG einem Pool hinzufügen oder ausgeben.",
     "governanceVotes": "Abstimmungen zur Governance werden mit einfacher Mehrheit entschieden. Es gibt keine Mindestwahlbeteiligung.",
     "proposals": "Anträge",
@@ -446,8 +446,8 @@
     "proposer": "Antragsteller"
   },
   "IDOPage": {
-    "pangolinIDOs": "Initial DEX Offering (IDO)",
-    "pangolinIDODescription": "Initial DEX Offerings (IDO) ermöglichen es Projekten, ihre nativen Token an dezentralen Börsen zu finanzieren. Wir haben uns mit großartigen Teams zusammengetan, um großartige Projekte in die Avalanche-Community zu bringen",
+    "rugenerousIDOs": "Initial DEX Offering (IDO)",
+    "rugenerousIDODescription": "Initial DEX Offerings (IDO) ermöglichen es Projekten, ihre nativen Token an dezentralen Börsen zu finanzieren. Wir haben uns mit großartigen Teams zusammengetan, um großartige Projekte in die Avalanche-Community zu bringen",
     "upcomingIDOs": "Bevorstehende",
     "endedIDOs": "Beendet",
     "allIDOs": "Alle IDOs",
