--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -78,8 +78,8 @@
     "missingDependencies": "faltan dependencias",
     "deposited": "Depositado",
     "withdrawDepositedLiquidity": "Retirar liquidez depositada",
-    "depositedPglLiquidity": "Liquidez PGL depositados:",
-    "whenYouWithdrawWarning": "Cuando retiras, sus RUG son reclamados y tus Pangolin Liquidity tokens, PGL, le son devueltos. Usted no ganará RUG de recompensa por esta liquidez. Tu token original de liquidez permanecerá en su pool de liquidez.",
+    "depositedRlpLiquidity": "Liquidez RLP depositados:",
+    "whenYouWithdrawWarning": "Cuando retiras, sus RUG son reclamados y tus RuGenerous Liquidity tokens, RLP, le son devueltos. Usted no ganará RUG de recompensa por esta liquidez. Tu token original de liquidez permanecerá en su pool de liquidez.",
     "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your RUG is returned to you. You will no longer earn {{ symbol }} rewards on this RUG.",
     "withdrawAndClaim": "Retirar y reclamar",
     "withdrewStakingToken": "{{ symbol }} retirados!",
@@ -227,7 +227,7 @@
     "minutes": "minutos"
   },
   "vote": {
-    "earnedRug": "Earned RUG tokens represent voting shares in Pangolin governance.",
+    "earnedRug": "Earned RUG tokens represent voting shares in RuGenerous governance.",
     "canEitherVote": "You can either vote on each proposal yourself or delegate your votes to a third party.",
     "delegateVotes": "Delegar votos",
     "selfDelegate": "Autodelegar",
@@ -301,20 +301,20 @@
     "youHave": "Tiene ",
     "pngAvailableClaim": " RUG disponible para reclamar",
     "loading": "Cargando",
-    "welcomeToTeamPangolin": "Bienvenido al equipo Pangolin",
+    "welcomeToTeamRuGenerous": "Bienvenido al equipo RuGenerous",
     "claim": "reclamar "
   },
   "earnPage": {
-    "pangolinLiquidityMining": "Minería de liquidez Pangolin",
-    "pangolinLiquidityStaking": "Pangolin RUG staking",
-    "depositPangolinLiquidity": "Deposite sus tokens Pangolin Liquidity Provider PGL para recivir RUG, el token del protocolo de governanza de Pangolin.",
-    "depositPangolinStaking": "Deposit and stake your RUG tokens to earn more tokens.",
+    "rugenerousLiquidityMining": "Minería de liquidez RuGenerous",
+    "rugenerousLiquidityStaking": "RuGenerous RUG staking",
+    "depositRuGenerousLiquidity": "Deposite sus tokens RuGenerous Liquidity Provider RLP para recivir RUG, el token del protocolo de governanza de RuGenerous.",
+    "depositRuGenerousStaking": "Deposit and stake your RUG tokens to earn more tokens.",
     "currentOpportunities": "Current opportunities",
     "readMoreAboutRug": "Leer más sobre RUG",
     "getInsuranceCoverage": "Obtenga cobertura de seguro",
     "getCoverNexusMutual": "Ponte a cubierto en Nexus Mutual",
     "importantUpdate": "ACTUALIZACIÓN IMPORTANTE",
-    "pangolinGovernanceProposalResult": "Como resultado de la primera proposición de governanza de Pangolin, este está cambiando sus contratos de staking! Después de aproximadamente 08:59 UTC el 4/19, todas las recompensas serán distribuidas a los nuevos contratos. Antes del cambio, todas las recompensas serán distribuidas a los viejos contratos. para evitar interrupciones en las recompensas, necesita retirar su liquidez de los viejos contratos y depositarla en los nuevos. No necesita retirar su liquidez de sus pools ni alterar sus posiciones.",
+    "rugenerousGovernanceProposalResult": "Como resultado de la primera proposición de governanza de RuGenerous, este está cambiando sus contratos de staking! Después de aproximadamente 08:59 UTC el 4/19, todas las recompensas serán distribuidas a los nuevos contratos. Antes del cambio, todas las recompensas serán distribuidas a los viejos contratos. para evitar interrupciones en las recompensas, necesita retirar su liquidez de los viejos contratos y depositarla en los nuevos. No necesita retirar su liquidez de sus pools ni alterar sus posiciones.",
     "oldRugPools": "Viejas pools RUG",
     "newRugPools": "Nuevas pools RUG",
     "participatingPools": "Participating pools",
@@ -324,8 +324,8 @@
     "pngStaking": "RUG Staking",
     "totalStaked": "Total depositado",
     "poolRate": "Ratio de la Pool",
-    "step1": "Step 1. Get Pangolin Liquidity tokens (PGL)",
-    "pglTokenRequired": "PGL tokens are required. Once you've added liquidity to the {{ poolHandle }} pool you can stake your liquidity tokens on this page.",
+    "step1": "Step 1. Get RuGenerous Liquidity tokens (RLP)",
+    "pglTokenRequired": "RLP tokens are required. Once you've added liquidity to the {{ poolHandle }} pool you can stake your liquidity tokens on this page.",
     "addPoolLiquidity": "Add {{ poolHandle }} liquidity",
     "liquidityDeposits": "Sus depósitods de liquidez",
     "yourStakedToken": "Your staked {{ symbol }}",
@@ -411,7 +411,7 @@
   },
   "buyPage": {
     "buyAvaxInfo": "Compre AVAX con fiat de nuestro socio Wyre.",
-    "privacyInfo": "Pangolin no almacena su historial de compras ni ningún dato personal.",
+    "privacyInfo": "RuGenerous no almacena su historial de compras ni ningún dato personal.",
     "firstName": "Nombre",
     "lastName": "Apellido",
     "email": "Email",
@@ -420,8 +420,8 @@
   "votePage": {
     "unlockVotes": "Desbloquear votos",
     "updateDelegation": "Actualizar delegación",
-    "pangolinGovernance": "Governanza Pangolin",
-    "earnedRugTokens": "los tokens RUG representan participaciones en la governanza de Pangolin Puede votar en cada proposición usted mismo o delegar sus votos a un tercero.",
+    "rugenerousGovernance": "Governanza RuGenerous",
+    "earnedRugTokens": "los tokens RUG representan participaciones en la governanza de RuGenerous Puede votar en cada proposición usted mismo o delegar sus votos a un tercero.",
     "eligibleToVote": "Para ser elegible para votar, debe tener RUG en su cartera y delegarlos al comienzo de la votación. Una vez la votación haya empezado, puede depositar en una pool o gastar sus RUG.",
     "governanceVotes": "Los votos de la governanza se deciden por mayoría. No hay un límite de quorum.",
     "proposals": "Proposiciones",
@@ -446,8 +446,8 @@
     "proposer": "Proponente"
   },
   "IDOPage": {
-    "pangolinIDOs": "Initial DEX Offering (IDO)",
-    "pangolinIDODescription": "Las Ofertas Iniciales DEX (IDO) permiten a los proyectos financiar en forma colectiva sus tokens nativos en plataformas de intercambio descentralizados. Nos hemos asociado con equipos increíbles para llevar grandes proyectos a la comunidad de Avalanche.",
+    "rugenerousIDOs": "Initial DEX Offering (IDO)",
+    "rugenerousIDODescription": "Las Ofertas Iniciales DEX (IDO) permiten a los proyectos financiar en forma colectiva sus tokens nativos en plataformas de intercambio descentralizados. Nos hemos asociado con equipos increíbles para llevar grandes proyectos a la comunidad de Avalanche.",
     "upcomingIDOs": "Próximos",
     "endedIDOs": "Terminados",
     "allIDOs": "Todos los IDOs",
