--- a/public/locales/pt-br.json
+++ b/public/locales/pt-br.json
@@ -78,8 +78,8 @@
         "missingDependencies": "Dependências ausentes",
         "deposited": "Depositado",
         "withdrawDepositedLiquidity": "Retirar a liquidez depositada",
-        "depositedPglLiquidity": "Deposited PGL liquidity:",
-        "whenYouWithdrawWarning": "Quando você retirar, seu RUG é resgatado e seus tokens de liquidez do Pangolin, PGL, são devolvidos para você. Você não vai mais ganhar recompensas de RUG nessa liquidez. Sua liquidez original de token permanecerá na sua pool de liquidez.",
+        "depositedRlpLiquidity": "Deposited RLP liquidity:",
+        "whenYouWithdrawWarning": "Quando você retirar, seu RUG é resgatado e seus tokens de liquidez do RuGenerous, RLP, são devolvidos para você. Você não vai mais ganhar recompensas de RUG nessa liquidez. Sua liquidez original de token permanecerá na sua pool de liquidez.",
         "whenYouWithdrawSingleSideWarning": "When you withdraw, your {{ symbol }} is claimed and your RUG is returned to you. You will no longer earn {{ symbol }} rewards on this RUG.",
         "withdrawAndClaim": "Retirar & resgatar",
         "withdrewStakingToken": "Retirar {{ symbol }}!",
@@ -227,7 +227,7 @@
         "minutes": "minutos"
     },
     "vote": {
-        "earnedRug": "Os tokens RUG ganhos representam ações de votação na governança do Pangolin.",
+        "earnedRug": "Os tokens RUG ganhos representam ações de votação na governança do RuGenerous.",
         "canEitherVote": "Você pode votar em cada proposta você mesmo ou delegar seus votos a um terceiro.",
         "delegateVotes": "Delegar votos",
         "selfDelegate": "Delegar você mesmo",
@@ -301,20 +301,20 @@
         "youHave": "Você tem ",
         "pngAvailableClaim": " RUG disponível para resgate",
         "loading": "Carregando",
-        "welcomeToTeamPangolin": "Bem vindo à equipe do Pangolin",
+        "welcomeToTeamRuGenerous": "Bem vindo à equipe do RuGenerous",
         "claim": "Resgatar "
     },
     "earnPage": {
-        "pangolinLiquidityMining": "Mineração de liquidez do Pangolin",
-        "pangolinLiquidityStaking": "Pangolin RUG staking",
-        "depositPangolinLiquidity": "Deposite seus tokens PGL (Pangolin Liquidity Provider) para receber RUG, o token de governança do protocolo Pangolin.",
-        "depositPangolinStaking": "Deposit and stake your RUG tokens to earn more tokens.",
+        "rugenerousLiquidityMining": "Mineração de liquidez do RuGenerous",
+        "rugenerousLiquidityStaking": "RuGenerous RUG staking",
+        "depositRuGenerousLiquidity": "Deposite seus tokens RLP (RuGenerous Liquidity Provider) para receber RUG, o token de governança do protocolo RuGenerous.",
+        "depositRuGenerousStaking": "Deposit and stake your RUG tokens to earn more tokens.",
         "currentOpportunities": "Current opportunities",
         "readMoreAboutRug": "Leia mais sobre RUG",
         "getInsuranceCoverage": "Obtenha cobertura de seguro",
         "getCoverNexusMutual": "Obtenha cobertura no Nexus Mutual",
         "importantUpdate": "ATUALIZAÇÃO IMPORTANTE",
-        "pangolinGovernanceProposalResult": "Como resultado da proposta de governança 1 do Pangolin, O Pangolin está mudando contratos de staking! Aproximadamente cerca de depois de 08:59 UTC no dia 19/4, todas as recompensas de staking serão distribuídas para os novos contratos de staking. Antes da mudança, todas as recompensas ainda serão distribuídas para os contratos antigos. Para evitar interrupções nas recompensas de yield farming, Você precisa remover sua liquidez dos contratos antigos e delegar novamente nos novos contratos. Você não precisa remover liquidez das suas pools ou alterar suas posições.",
+        "rugenerousGovernanceProposalResult": "Como resultado da proposta de governança 1 do RuGenerous, O RuGenerous está mudando contratos de staking! Aproximadamente cerca de depois de 08:59 UTC no dia 19/4, todas as recompensas de staking serão distribuídas para os novos contratos de staking. Antes da mudança, todas as recompensas ainda serão distribuídas para os contratos antigos. Para evitar interrupções nas recompensas de yield farming, Você precisa remover sua liquidez dos contratos antigos e delegar novamente nos novos contratos. Você não precisa remover liquidez das suas pools ou alterar suas posições.",
         "oldRugPools": "Pools antigas de RUG",
         "newRugPools": "Novas pools de RUG",
         "participatingPools": "Pools participantes",
@@ -324,8 +324,8 @@
         "pngStaking": "RUG Staking",
         "totalStaked": "Total depositado",
         "poolRate": "Proporção da Pool",
-        "step1": "Etapa 1. Obtenha Tokens Pangolin Liquidity (PGL)",
-        "pglTokenRequired": "Tokens PGL são necessários. Depois de adicionar liquidez na pool {{ poolHandle }}, você pode colocar seus tokens de liquidez nesta página.",
+        "step1": "Etapa 1. Obtenha Tokens RuGenerous Liquidity (RLP)",
+        "pglTokenRequired": "Tokens RLP são necessários. Depois de adicionar liquidez na pool {{ poolHandle }}, você pode colocar seus tokens de liquidez nesta página.",
         "addPoolLiquidity": "Adicionar liquidez de {{ poolHandle }} ",
         "liquidityDeposits": "Suas liquidez despositadas",
         "yourStakedToken": "Your staked {{ symbol }}",
@@ -411,7 +411,7 @@
     },
     "buyPage": {
         "buyAvaxInfo": "Compre AVAX com moeda fiduciária do nosso parceiro Wyre.",
-        "privacyInfo": "A Pangolin não armazena seu histórico de compras ou dados pessoais.",
+        "privacyInfo": "A RuGenerous não armazena seu histórico de compras ou dados pessoais.",
         "firstName": "Nome",
         "lastName": "Apelido",
         "email": "Email",
@@ -420,8 +420,8 @@
     "votePage": {
         "unlockVotes": "Desbloquear votos",
         "updateDelegation": "Atualizar delegação",
-        "pangolinGovernance": "Governaça do Pangolin",
-        "earnedRugTokens": "Os tokens RUG representam ações de votação na governança do Pangolin. Você pode votar em cada proposta você mesmo ou delegar seus votos a um terceiro .",
+        "rugenerousGovernance": "Governaça do RuGenerous",
+        "earnedRugTokens": "Os tokens RUG representam ações de votação na governança do RuGenerous. Você pode votar em cada proposta você mesmo ou delegar seus votos a um terceiro .",
         "eligibleToVote": "Para ser elegível para votar, você deve ter RUG em sua carteira e deve delegar eles ao início da votação. Após o início da votação, você pode pode colocá-los em uma pool ou gastá-los.",
         "governanceVotes": "Votações de governança são decididas por maioria simples. Não há quórum necessário.",
         "proposals": "Propostas",
@@ -446,8 +446,8 @@
         "proposer": "Quem fez a proposta"
     },
     "IDOPage": {
-        "pangolinIDOs": "Initial DEX Offering (IDO)",
-        "pangolinIDODescription": "As ofertas iniciais de DEX (IDO) permitem que os projetos façam crowdfund de seus tokens nativos em trocas descentralizadas. Fizemos parcerias com equipes incríveis para trazer grandes projetos para a comunidade Avalanche.",
+        "rugenerousIDOs": "Initial DEX Offering (IDO)",
+        "rugenerousIDODescription": "As ofertas iniciais de DEX (IDO) permitem que os projetos façam crowdfund de seus tokens nativos em trocas descentralizadas. Fizemos parcerias com equipes incríveis para trazer grandes projetos para a comunidade Avalanche.",
         "upcomingIDOs": "Por vir",
         "endedIDOs": "Terminado",
         "allIDOs": "Todos os IDOs",
